[cr] some fixes